Added image and title

--- a/main.html
+++ b/main.html
@@ -1,3 +1,15 @@
-<h1>Jake Wallace</h1>
-<p1>Graphic Design</p1>
-<a href="http://google.com" target="_blank" title="this link goes to google">click me!</a>
+<!DOCTYPE html>
+<html>
+    
+<head>
+    <title>jw_designist</title>
+</head>
+
+    <body>
+        <h1>Jake Wallace</h1>
+        <p1>Graphic <b>Design</b></p1>
+        <a href="http://google.com" target="_blank" title="this link goes to google">click me!</a>
+        <iframe src="https://drive.google.com/file/d/1SwCfEPWGNwx6m4D7kKaUbH8KQ1z_UiaZ/preview" width="480" height="480"></iframe>
+    </body>
+
+</html>
