--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
 </head>
 
     <body>
-        <h1>Jake Wallace</h1>
-        <p1>Graphic <b>Design</b></p1>
-        <a href="http://google.com" target="_blank" title="this link goes to google">click me!</a>
-        <iframe src="https://drive.google.com/file/d/1SwCfEPWGNwx6m4D7kKaUbH8KQ1z_UiaZ/preview" width="480" height="480"></iframe>
+        <div><h1>Jake Wallace</h1>
+        <p1>Graphic <b>Design</b></p1></div>
+        <div><a href="http://google.com" target="_blank" title="this link goes to google">click me!</a>
+        <img src="img/jason-blackeye-ap3LXI0fPJY-unsplash.jpg" width="680" height="480"></div>
     </body>
 
 </html>
